--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,9 +14,8 @@ const currentYear = new Date().getFullYear()
     <p>&copy; {currentYear} Sofia Bautista-Sepulveda</p>
   </div>
   <p class='socials'>
-    <a href='https://twitter.com/me'> Twitter</a>
-    <a href='https://github.com/me'> GitHub</a>
-    <a href='https://codepen.io/me'> CodePen</a>
+    <a href='https://instagram.com/sofiabase'>Instagram</a>
+    <a href='https://linkedin.com/sofiabase§'>Linkedin</a>
   </p>
 </footer>
 <style>
