--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,13 +31,13 @@ const projects = (await getCollection('work'))
       <header class='hero'>
         <Hero
           title='Hello, my name is Sofia Bautista-Sepulveda'
-          tagline='I am pursuing a career in 3D modeling and animation.'
+          tagline='I am pursuing a career in animation and digital art.'
           align='start'
         >
           <div class='roles'>
-            <Pill><Icon icon='code' size='1.33em' />Developer</Pill>
-            <Pill><Icon icon='microphone-stage' size='1.33em' /> Speaker</Pill>
-            <Pill><Icon icon='pencil-line' size='1.33em' /> Writer</Pill>
+            <Pill><Icon icon='code' size='1.33em' />Artist</Pill>
+            <Pill><Icon icon='microphone-stage' size='1.33em' />Animator</Pill>
+            <Pill><Icon icon='pencil-line' size='1.33em' />Writer</Pill>
           </div>
         </Hero>
 
