--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ import Hero from '../components/Hero.astro'
         <img
           width='1553'
           height='873'
-          src='/assets/at-work.jpg'
+          src='/assets/portrait.jpg'
           alt='Sofia Bautista-Sepulveda at work with a colleague'
         />
       </Hero>
@@ -28,24 +28,24 @@ import Hero from '../components/Hero.astro'
         <div class='content'>
           <p>
             Lorem ipsum dolor sit amet, <a href='https://astro.build/'>Astro</a>
-            makes people happy. Sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Proin nibh nisl condimentum id venenatis a condimentum
-            vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla pharetra
-            diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus
-            in ornare.
+            makes people happy.
           </p>
         </div>
       </section>
+
       <section>
         <h2 class='section-title'>Education</h2>
         <div class='content'>
-          <p>Corporis voluptates tenetur laudantium.</p>
+          <p>GCSEs with emphasis in Art, Computing and History</p>
+          <p>English and Spanish native speaker; Italian learner</p>
         </div>
       </section>
       <section>
         <h2 class='section-title'>Skills</h2>
         <div class='content'>
-          <p>officia unde omnis</p>
+          <p>Kritra, Gimp, ProCreate,</p>
+          <p>Oil paint, knitting and some other techniques</p>
+          <p>JavaScript, Python</p>
         </div>
       </section>
     </main>
