--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,14 +1,15 @@
 ---
+import { username } from '../constants'
 import '../styles/global.css'
 
 interface Props {
-  title?: string | undefined
-  description?: string | undefined
+  description?: string
+  title?: string
 }
 
 const {
-  title = 'Sofia Bautista-Sepulveda: Personal Site',
-  description = 'The personal site of Sofia Bautista-Sepulveda'
+  description = `The personal site of ${username}.`,
+  title = `${username} | Portfolio & Blog`
 } = Astro.props
 ---
 
@@ -25,6 +26,7 @@ const {
   href='https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&family=Rubik:wght@500;600&display=swap'
   rel='stylesheet'
 />
+
 <script is:inline>
   // This code is inlined in the head to make dark mode instant & blocking.
   const getThemePreference = () => {
