--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,6 +3,8 @@ import Icon from './Icon.astro'
 import ThemeToggle from './ThemeToggle.astro'
 import type { iconPaths } from './IconPaths'
 
+import { socials, username } from '../constants'
+
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
   { label: 'Home', href: '/' },
@@ -16,8 +18,8 @@ const iconLinks: {
   href: string
   icon: keyof typeof iconPaths
 }[] = [
-  { label: 'Instagram', href: 'https://instagram.com/sofiabase', icon: 'instagram-logo' },
-  { label: 'Linkedin', href: 'https://linkedin.com/sofiabase', icon: 'linkedin-logo' },
+  { label: socials.instagram.name, href: socials.instagram.url, icon: 'instagram-logo' },
+  { label: socials.linkedin.name, href: socials.linkedin.url, icon: 'linkedin-logo' },
 ]
 ---
 
@@ -30,8 +32,9 @@ const iconLinks: {
         size='1.6em'
         gradient
       />
-      Sofia Bautista-Sepulveda
+      {username}
     </a>
+
     <menu-button>
       <template>
         <button class='menu-button' aria-expanded='false'>
@@ -41,6 +44,7 @@ const iconLinks: {
       </template>
     </menu-button>
   </div>
+
   <noscript>
     <ul class='nav-items'>
       {
@@ -65,6 +69,7 @@ const iconLinks: {
       }
     </ul>
   </noscript>
+
   <noscript>
     <div class='menu-footer'>
       <div class='socials'>
@@ -79,6 +84,7 @@ const iconLinks: {
       </div>
     </div>
   </noscript>
+
   <div id='menu-content' hidden>
     <ul class='nav-items'>
       {
@@ -102,6 +108,7 @@ const iconLinks: {
         ))
       }
     </ul>
+
     <div class='menu-footer'>
       <div class='socials'>
         {
