--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,11 +3,12 @@ import BaseLayout from '../layouts/BaseLayout.astro'
 
 import ContactCTA from '../components/ContactCTA.astro'
 import Hero from '../components/Hero.astro'
+import { username } from '../constants'
 ---
 
 <BaseLayout
-  title='About | Sofia Bautista-Sepulveda'
-  description='About Sofia Bautista-Sepulveda'
+  description=`About ${username}`
+  title=`About | ${username}`
 >
   <div class='stack gap-20'>
     <main class='wrapper about'>
@@ -19,7 +20,7 @@ import Hero from '../components/Hero.astro'
           width='1553'
           height='873'
           src='/assets/portrait.jpg'
-          alt='Sofia Bautista-Sepulveda at work with a colleague'
+          alt=`${username} creating art work`
         />
       </Hero>
 
