--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection } from 'astro:content'
+import { username } from '../constants'
 
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
 import BaseLayout from '../layouts/BaseLayout.astro'
@@ -20,9 +21,6 @@ import Skills from '../components/Skills.astro'
 const projects = (await getCollection('work'))
   .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
   .slice(0, 4)
-
-// Full Astro Component Syntax:
-// https://docs.astro.build/core-concepts/astro-components/
 ---
 
 <BaseLayout>
@@ -30,7 +28,7 @@ const projects = (await getCollection('work'))
     <div class='wrapper stack gap-8 lg:gap-20'>
       <header class='hero'>
         <Hero
-          title='Hello, my name is Sofia Bautista-Sepulveda'
+          title={`Hello, my name is ${username}`}
           tagline='I am pursuing a career in animation and digital art.'
           align='start'
         >
@@ -42,7 +40,7 @@ const projects = (await getCollection('work'))
         </Hero>
 
         <img
-          alt='Sofia Bautista-Sepulveda logo'
+          alt=`${username} portrait`
           width='480'
           height='620'
           src='/assets/portrait.jpg'
