--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -5,9 +5,9 @@ import Icon from './Icon.astro'
 
 <aside>
   <h2>Interested in working together?</h2>
-  <CallToAction href='mailto:s.bautista.sepulveda@gmail.com'>
+  <CallToAction href='mailto:s.bautista.sepulveda+portfolio@gmail.com'>
     Send Me a Message
-    <Icon icon='paper-plane-tilt' size='1.2em' />
+    <Icon icon='paperPlane' size='1.2em' />
   </CallToAction>
 </aside>
 
