--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,8 +9,8 @@ const currentYear = new Date().getFullYear()
 <footer>
   <div class='group'>
     <p>
-      Designed by Jeanine White & Developed with <a href='https://astro.build/'>Astro</a>
-      <Icon icon='rocket-launch' size='1.2em' />
+      Designed by Jeanine White</a>
+      <Icon icon='rocketLaunch' size='1.2em' />
     </p>
     <p>©️ {currentYear} {username}</p>
   </div>
