--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -30,7 +30,8 @@ const { align = 'center', tagline, title } = Astro.props
 
   .title {
     font-size: var(--text-3xl);
-    color: var(--gray-0);
+    color: var(--gray-0)
+    text-wrap: pretty;
   }
 
   @media (min-width: 50em) {
