--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -18,8 +18,8 @@ const iconLinks: {
   href: string
   icon: keyof typeof iconPaths
 }[] = [
-  { label: socials.instagram.name, href: socials.instagram.url, icon: 'instagram-logo' },
-  { label: socials.linkedin.name, href: socials.linkedin.url, icon: 'linkedin-logo' },
+  { label: socials.instagram.name, href: socials.instagram.url, icon: 'instagramLogo' },
+  { label: socials.linkedin.name, href: socials.linkedin.url, icon: 'linkedinLogo' },
 ]
 ---
 
@@ -27,7 +27,7 @@ const iconLinks: {
   <div class='menu-header'>
     <a href='/' class='site-title'>
       <Icon
-        icon='terminal-window'
+        icon='palette'
         color='var(--accent-regular)'
         size='1.6em'
         gradient
