Create-work-sections

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,8 +37,8 @@ import { username } from '../constants'
       <section>
         <h2 class='section-title'>Education</h2>
         <div class='content'>
-          <p>GCSEs with emphasis in Art, Computing and History</p>
-          <p>English and Spanish native speaker; Italian learner</p>
+          <p>GCSEs with emphasis in Art, Computing and History.</p>
+          <p>🇬🇧 and 🇨🇴 native speaker; 🇮🇹 learner 🤓</p>
         </div>
       </section>
       <section>
@@ -46,7 +46,7 @@ import { username } from '../constants'
         <div class='content'>
           <p>Kritra, Gimp, ProCreate,</p>
           <p>Oil paint, knitting and some other techniques</p>
-          <p>JavaScript, Python</p>
+          <p>JavaScript, Python, MacOS and Linux.</p>
         </div>
       </section>
     </main>
