--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,16 +16,17 @@ import PortfolioPreview from '../components/PortfolioPreview.astro'
 // Page section components
 import ContactCTA from '../components/ContactCTA.astro'
 import Skills from '../components/Skills.astro'
+import { Debug } from 'astro:components'
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection('work'))
-  .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-  .slice(0, 4)
+  .filter(project => project.data.featured)
 ---
 
 <BaseLayout>
   <div class='stack gap-20 lg:gap-48'>
-    <div class='wrapper stack gap-8 lg:gap-20'>
+    <div class='wrapper stack gap-8 lg:gap-20'>\
+      <Debug value={projects} />
       <header class='hero'>
         <Hero
           title={`Hello, my name is ${username}`}
