--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -9,9 +9,8 @@ import Hero from '../components/Hero.astro'
 import Grid from '../components/Grid.astro'
 import { username } from '../constants'
 
-const projects = (await getCollection('work')).sort(
-  (a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
-)
+// const projects = (await getCollection('work'))
+//   .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
 ---
 
 <BaseLayout
@@ -22,10 +21,11 @@ const projects = (await getCollection('work')).sort(
     <main class='wrapper stack gap-8'>
       <Hero
         title='My Work'
-        tagline='See my most recent projects below to get an idea of my past experience.'
+        tagline='See my projects below to get an idea of my past experience.'
         align='start'
       />
-      <Grid variant='offset'>
+
+      <!-- <Grid variant='offset'>
         {
           projects.map(project => (
             <li>
@@ -33,7 +33,7 @@ const projects = (await getCollection('work')).sort(
             </li>
           ))
         }
-      </Grid>
+      </Grid> -->
     </main>
     <ContactCTA />
   </div>
