--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,6 @@ import PortfolioPreview from '../components/PortfolioPreview.astro'
 
 // Page section components
 import ContactCTA from '../components/ContactCTA.astro'
-import Skills from '../components/Skills.astro'
-import { Debug } from 'astro:components'
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection('work'))
@@ -25,8 +23,7 @@ const projects = (await getCollection('work'))
 
 <BaseLayout>
   <div class='stack gap-20 lg:gap-48'>
-    <div class='wrapper stack gap-8 lg:gap-20'>\
-      <Debug value={projects} />
+    <div class='wrapper stack gap-8 lg:gap-20'>
       <header class='hero'>
         <Hero
           title={`Hello, my name is ${username}`}
@@ -47,8 +44,6 @@ const projects = (await getCollection('work'))
           src='/assets/portrait.jpg'
         />
       </header>
-
-      <Skills />
     </div>
 
     <main class='wrapper stack gap-20 lg:gap-48'>
@@ -77,31 +72,6 @@ const projects = (await getCollection('work'))
             View All
             <Icon icon='arrowRight' size='1.2em' />
           </CallToAction>
-        </div>
-      </section>
-
-      <section class='section with-background bg-variant'>
-        <header class='section-header stack gap-2 lg:gap-4'>
-          <h3>Mentions</h3>
-          <p>
-            I have been fortunate enough to receive praise for my work in
-            several publications. Take a look below to learn more.
-          </p>
-        </header>
-
-        <div class='gallery'>
-          <Grid variant='small'>
-            {
-              [
-                'Medium',
-                'TechCrunch'
-              ].map(brand => (
-                <li class='mention-card'>
-                  <p>{brand}</p>
-                </li>
-              ))
-            }
-          </Grid>
         </div>
       </section>
     </main>
