--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -2,6 +2,7 @@
 import { type CollectionEntry, getCollection } from 'astro:content'
 
 import BaseLayout from '../../layouts/BaseLayout.astro'
+import { urls } from '../../constants'
 
 import ContactCTA from '../../components/ContactCTA.astro'
 import Hero from '../../components/Hero.astro'
@@ -32,7 +33,7 @@ const { Content } = await entry.render()
     <div class='stack gap-15'>
       <header>
         <div class='wrapper stack gap-2'>
-          <a class='back-link' href='/work/'><Icon icon='arrowLeft' /> Work</a>
+          <a class='back-link' href={urls.work}><Icon icon='arrowLeft' /> Work</a>
           <Hero title={entry.data.title} align='start'>
             <div class='details'>
               <div class='tags'>
