--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const projects = (await getCollection('work'))
         >
           <div class='roles'>
             <Pill><Icon icon='palette' size='1.33em' />Artist</Pill>
-            <Pill><Icon icon='feather' size='1.33em' />2D/3D Animator in progress</Pill>
+            <Pill><Icon icon='feather' size='1.33em' />2D Animator in progress</Pill>
             <Pill><Icon icon='pencilLine' size='1.33em' />Writer</Pill>
           </div>
         </Hero>
