--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -18,8 +18,7 @@ const iconLinks: {
   href: string
   icon: keyof typeof iconPaths
 }[] = [
-  { label: socials.instagram.name, href: socials.instagram.url, icon: 'instagramLogo' },
-  { label: socials.linkedin.name, href: socials.linkedin.url, icon: 'linkedinLogo' },
+  { label: socials.instagram.name, href: socials.instagram.url, icon: 'instagramLogo' }
 ]
 ---
 
@@ -113,7 +112,12 @@ const iconLinks: {
       <div class='socials'>
         {
           iconLinks.map(({ href, icon, label }) => (
-            <a href={href} class='social'>
+            <a
+              class='social'
+              href={href}
+              rel="noopener noreferrer"
+              target="_blank"
+            >
               <span class='sr-only'>{label}</span>
               <Icon icon={icon} />
             </a>
