--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { socials, username } from '../constants'
+import { socials } from '../constants'
 
 import Icon from './Icon.astro'
 
@@ -12,7 +12,7 @@ const currentYear = new Date().getFullYear()
       Designed by Jeanine White</a>
       <Icon icon='rocketLaunch' size='1.2em' />
     </p>
-    <p>Built with ❤️ by {username} ©️ {currentYear}</p>
+    <p>Built with ❤️ | {currentYear} ©️</p>
   </div>
 
   <p class='socials'>
