--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ import Hero from '../components/Hero.astro'
         <img
           width='1553'
           height='873'
-          src=`${assets}/portrait.jpg`
+          src=`${assets}/logo.png`
           alt=`${username} creating art work`
         />
       </Hero>
