--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -16,10 +16,10 @@ const parsedTitle = isMainSection ? data.tags[0].split(',')[0] : data.title
 <a class='card' href={`${urls.work}${parsedSlug}`}>
   <span class='title'>{parsedTitle}</span>
   <img
-    src={data.img}
     alt={data.img_alt || ''}
-    loading='lazy'
     decoding='async'
+    src={data.img}
+    loading='lazy'
   />
 </a>
 
@@ -58,6 +58,11 @@ const parsedTitle = isMainSection ? data.tags[0].split(',')[0] : data.title
     grid-area: 1 / 1 / 3 / 3;
     width: 100%;
     height: 100%;
+    object-fit: cover;
+  }
+
+  video {
+    grid-area: 1 / 1 / 3 / 3;
     object-fit: cover;
   }
 
