Update background section

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,8 +28,10 @@ import Hero from '../components/Hero.astro'
         <h2 class='section-title'>Background</h2>
         <div class='content'>
           <p>
-            Lorem ipsum dolor sit amet, <a href='https://astro.build/'>Astro</a>
-            makes people happy.
+            My name is Sofia, I create all sorts of art digitally using Krita
+            and also physically using all sorts of mediums.
+            My aim with my art is to allow people to view different topics
+            through my eyes.
           </p>
         </div>
       </section>
