--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -19,7 +19,7 @@ const {
 <meta name='generator' content={Astro.generator} />
 <title>{title}</title>
 
-<link rel='icon' type='image/svg+xml' href='/sofia_bautista_sepulveda_IDD_portfolio/assets/logo.png' />
+<link rel='icon' type='image/svg+xml' href='/portfolio/assets/logo.png' />
 <link rel='preconnect' href='https://fonts.googleapis.com' />
 <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
 <link
